# rs-std-hash-bench

./: Cargo.toml  README.md  build-web.sh  index.html
src/: lib.rs  main.rs
