[package]
name = "u128-hash-bench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
more-asserts = "0.3.1"
nohash-hasher = "0.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["js", "v4"] }
web-sys = "0.3.67"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = [
	"console",
	"Window",
	"Performance",
] }
